<resources>
    <string name="app_name">My Gym Club</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="passport">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="advertisement">幻风体育俱乐部欢迎您的加入！</string>
    <string name="about">关于我们</string>
    <string name="register_username">注册用户名</string>
    <string name="register_passport">注册密码</string>
    <string name="register_passport2">确认密码</string>
    <string name="confirm">确认</string>
    <string name="proof">发送验证码</string>
    <string name="proveNumber">验证码</string>
    <string name="phone">手机号</string>
    <string name="back">返回</string>
    <string name="password">密码</string>
    <string name="login_button">登录</string>
    <string name="forget_button">忘记密码</string>
    <string name="lable_grad_view_recommend">推荐</string>
    <string name="teachers">名师导引</string>
    <string name="courses">我的课程</string>
    <string name="inquiry">线下咨询</string>
    <string name="feedback">疑问与反馈</string>
    <string name="man">性别：男</string>
    <string name="subject">科目:</string>
    <string name="teacherName">教师姓名:</string>
    <string name="beginToStudy">开始学习</string>
    <string name="happy">快乐学习，由我开始</string>
    <string name="courseTime">开课时间：</string>
    <string name="details">课程详细信息</string>
    <string name="home_title">Home</string>
    <string name="trainer_list_title">Trainers List</string>
    <string name="information_title">Information</string>
</resources>
