<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutHor"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/text_input_user"
        style="@style/Input"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/text_input_password"
        style="@style/Input"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/ButtonNormal"
        android:text="@string/login_button" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:background="#00000000"
            android:text="@string/register"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/forget_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/forget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:background="#00000000"
            android:text="@string/forget_button"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="128dp"
        android:text="@string/about"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

</LinearLayout>